--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
   <body>
     {% include header.html %}
-    {% include banner_parent.html %}
+    {% include banner_default.html %}
 
     <div class="wrapper">
       {% include navbar.html %}
