--- a/_includes/banner_default.html
+++ b/_includes/banner_default.html
@@ -3,12 +3,12 @@
     <span id="logo"><span class="octicon octicon-mark-github"></span></span>
 
     {% if page.repo %}
-    <a href="https://github.com/{{ page.repo }}" class="button fork"><strong>View On GitHub</strong></a>
+    <a href="https://github.com/{{ page.repo }}" target="_blank" class="button fork"><strong>View On GitHub</strong></a>
     <div class="downloads">
       <span>Downloads</span>
       <ul>
-        <li><a href="https://github.com/{{ page.repo }}/zipball/master" class="button">ZIP</a></li>
-        <li><a href="https://github.com/{{ page.repo }}/tarball/master" class="button">TAR</a></li>
+        <li><a href="https://github.com/{{ page.repo }}/zipball/master" target="_blank" class="button">ZIP</a></li>
+        <li><a href="https://github.com/{{ page.repo }}/tarball/master" target="_blank" class="button">TAR</a></li>
       </ul>
     </div>
     {% endif %}
