--- a/_includes/banner_root.html
+++ b/_includes/banner_root.html
@@ -2,11 +2,11 @@
   <div class="banner-inner">
     <span id="logo"><span class="octicon octicon-mark-github"></span></span>
 
-    <a href="https://github.com/{{ page.repo }}" class="button fork"><strong>View On GitHub</strong></a>
+    <a href="https://github.com/{{ page.repo }}" target="_blank" class="button fork"><strong>View On GitHub</strong></a>
     <div class="downloads">
       <span>Visit</span>
       <ul>
-        <li><a href="https://daslab.stanford.edu/" class="button"><strong>Das Lab</strong></a></li>
+        <li><a href="https://daslab.stanford.edu/" target="_blank" class="button"><strong>Das Lab</strong></a></li>
       </ul>
     </div>
   </div>
