--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ page.title }} | DasLab</title>
+    {% if page.level == 0 %}
+      <title>DasLab</title>
+    {% else%}
+      <title>{{ page.title }} | DasLab</title>
+    {% endif %}
 
-    <link rel="shortcut icon" href="/assets/daslab.gif" />
-    <link rel="icon" type-"image/gif" href="/assets/daslab.gif" />
+    <link rel="shortcut icon" type="image/gif" href="/assets/daslab.gif" />
+    <link rel="icon" type="image/gif" href="/assets/daslab.gif" />
 
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/github-dark.css">
@@ -21,7 +25,7 @@
 
   <body>
     {% include header.html %}
-    {% include banner_default.html %}
+    {% include banner.html %}
 
     <div class="wrapper">
       {% include navbar.html %}
