--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    {% if page.level == 0 %}
-      <title>DasLab</title>
-    {% else%}
+    {% if page.title %}
       <title>{{ page.title }} | DasLab</title>
+    {% else %}
+      <title>DasLab</title>
     {% endif %}
 
     <link rel="shortcut icon" type="image/gif" href="/assets/daslab.gif" />
