--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     {% if page.title %}
-      <title>{{ page.title }} | DasLab</title>
+      <title>{{ page.title }} | RiboKit</title>
     {% else %}
       <title>DasLab</title>
     {% endif %}
