--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <p style="margin:0;">
         <small>Project maintained by</small>
         <br/>
-        <a href="https://github.com/DasLab"><b>Das Lab</b></a>&nbsp;
+        <a href="https://github.com/DasLab" rel="noopener noreferrer external"><b>Das Lab</b></a>&nbsp;
         {% if page.author %}
         <br/>
         <small>Page created by</small>
