--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <h1>
         <a href="/">DasLab</a> 
-        {% if page.title %}
+        {% if page.level != 0 and page.title %}
         : <a href="{{ page.root }}">{{ page.title }}</a>
         {% endif %}
     </h1>
