update html templates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
     <h1>
-        <a href="/">DasLab</a> 
+        <a href="/">RiboKit</a> 
         {% if page.level != 0 and page.title %}
         : <a href="{{ page.root }}">{{ page.title }}</a>
         {% endif %}
